[project]
name = "quant-blackscholes-crank-nicolson"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "matplotlib>=3.10.7",
    "notebook>=7.4.7",
    "numpy>=2.3.4",
    "ipympl>=0.9.5",
    "ipykernel>=6.29.5",
    "scipy>=1.16.3",
]
